force-app/main/default/objects/Account/fields/NumberOfTest__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NumberOfTest</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>