force-app/main/default/objects/Account/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>if(ISPICKVAL( UpsellOpportunity__c , &quot;〇&quot;),&quot;OHYEAH&quot;,&quot;Failed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <type>Text</type>
</CustomField>