force-app/main/default/objects/Account/recordTypes/Acc01.recordType-meta.xml
<RecordType>
    <fullName>Acc01</fullName>
    <active>true</active>
    <label>Acc01</label>
</RecordType>